<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/kpu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_informasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_judul"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="10dp"
        android:text="@string/informasi"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_form_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_informasi"
        android:layout_marginBottom="10dp"
        android:text="@string/form_entry" />

    <Button
        android:id="@+id/btn_lihat_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_form_entry"
        android:layout_marginBottom="10dp"
        android:text="@string/lihat_data" />

    <Button
        android:id="@+id/btn_keluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_lihat_data"
        android:text="@string/keluar" />

</RelativeLayout>