<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".DetailPemilih">

    <TextView
        android:id="@+id/tx_judulx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_pemilih"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nik" />

        <TextView
            android:id="@+id/txx_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nama_lengkap"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txx_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_hp" />

        <TextView
            android:id="@+id/txx_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jenis_kelamin"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txx_jk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tanggal" />

        <TextView
            android:id="@+id/txx_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alamat" />

        <TextView
            android:id="@+id/txx_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>